1. init tree 2. revise some define for avoiding duplcate import

--- a/dsHomework/dsHomework.vcxproj.filters
+++ b/dsHomework/dsHomework.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="EricUtil.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="EricTree.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
