--- a/dsHomework/dsHomework.vcxproj
+++ b/dsHomework/dsHomework.vcxproj
@@ -116,6 +116,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EricSort.h" />
+    <ClInclude Include="EricTree.h" />
     <ClInclude Include="EricUtil.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
