--- a/dsHomework/dsHomework.vcxproj.filters
+++ b/dsHomework/dsHomework.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="EricBinarySearchTree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="EricNumHash.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EricSort.h">
@@ -39,6 +42,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="EricBinarySearchTree.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="EricNumHash.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
