--- a/dsHomework/dsHomework.vcxproj
+++ b/dsHomework/dsHomework.vcxproj
@@ -110,18 +110,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="EricBinarySearchArrayUtil.cpp" />
     <ClCompile Include="EricBinarySearchTree.cpp" />
+    <ClCompile Include="EricHeapSort.cpp" />
     <ClCompile Include="EricNumHash.cpp" />
     <ClCompile Include="EricSort.cpp" />
     <ClCompile Include="EricUtil.cpp" />
+    <ClCompile Include="m10task2.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="m10task1.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="EricBinarySearchArrayUtil.h" />
     <ClInclude Include="EricBinarySearchTree.h" />
+    <ClInclude Include="EricHeapSort.h" />
     <ClInclude Include="EricNumHash.h" />
     <ClInclude Include="EricSort.h" />
     <ClInclude Include="EricTree.h" />
     <ClInclude Include="EricUtil.h" />
+    <ClInclude Include="m10task1.h" />
+    <ClInclude Include="m10task2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
